[package]
name = "merk"
description = "Merkle key/value store"
version = "2.0.0"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
thiserror= "1.0.31"

[dependencies.hex]
version = "0.4.3"
optional = true

[dependencies.colored]
version = "2.0.0"
optional = true

[dependencies.num_cpus]
version = "1.13.1"
optional = true

[dependencies.byteorder]
version = "1.3.2"
optional = true

[dependencies.ed]
version = "0.3.0"
optional = true

[dependencies.blake3]
version = "0.3.7"
optional = true

[dependencies.rand]
version = "0.8.5"
features = ["small_rng"]
optional = true

[dependencies.rocksdb]
version = "0.19"
default-features = false
optional = true

[dependencies.jemallocator]
version = "0.5.0"
features = ["disable_initial_exec_tls"]
optional = true

[dependencies.digest]
version = "0.9"

[features]
default = ["full", "verify"]
full = ["rand",
        "rocksdb",
        "hex",
        "colored",
        "num_cpus",
        "byteorder",
        "ed",
        "blake3"
]
verify = ["ed",
          "blake3"
]
